fixing the overflow on blog-list

--- a/styles/blog.css
+++ b/styles/blog.css
@@ -1054,3 +1054,7 @@
         min-height: 620px;
     }
 }
+
+main.content {
+    overflow-x: hidden !important;
+}
